--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
             transform: translateY(-4px) scale(1.05);
             box-shadow: 0 8px 24px rgba(170,8,76,0.25);
         }
+
+        @media (max-width: 600px) {
+            .btn-group {
+                flex-direction: column;
+                gap: 18px;
+                margin-top: 30px;
+                margin-bottom: 20px;
+                align-items: center;
+            }
+            button {
+                width: 90vw;
+                max-width: 320px;
+                font-size: 1.2em;
+                padding: 12px 0;
+            }
+            h1, h2 {
+                font-size: 1.3em;
+                margin-bottom: 12px;
+            }
+        }
         </style>
 </head>
 <body>
