--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="non">No !</button>
         <button id="jsp">Maybe...</button>
     </div>
-    <video id="oui-video" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; object-fit:cover; z-index:-1;" autoplay loop muted>
+    <video id="oui-video" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; object-fit:cover; z-index:-1;" autoplay loop>
         <source src="rickroll.mp4" type="video/mp4">
     </video>
     <img id="danseur" src="danse.gif" alt="Danseur" style="display:none; position:fixed; left:50%; top:50%; transform:translate(-50%,-50%); z-index:10; max-width:40vw; max-height:70vh;">
