--- a/index.html
+++ b/index.html
@@ -21,4 +21,22 @@
     <img id="danseur" src="danse.gif" alt="Danseur" style="display:none; position:fixed; left:50%; top:50%; transform:translate(-50%,-50%); z-index:10; max-width:40vw; max-height:70vh;">
 </body>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+<a href="Cv_Julie_Sirieix_Alternance_Dev.pdf" class="telecharger" download>
+   Télécharger mon CV
+</a>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
